Finish layout design

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,3 +1,23 @@
 .row
   .any.items.u-text-center
     h1 CPPS
+
+//Navbar
+.row
+  .twelve.items
+    ul.nav
+      li
+        a(href="/") Home
+      li
+        a(href='/notebook') Notebook
+      li
+        a(href='/gateway') Gateway
+      li.dropdown
+        a.dropbtn(href='#') More
+        ul.dropdown-content
+          li
+            a(href='/faq') FAQ
+          li
+            a(href='/report') Bugs & Hugs
+      li.navitem-pullright
+        a(href='/user/login') Login
