Add homepage content and footer style

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -12,12 +12,11 @@
         a(href='/notebook') Notebook
       li
         a(href='/gateway') Gateway
-      li.dropdown
-        a.dropbtn(href='#') More
-        ul.dropdown-content
-          li
-            a(href='/faq') FAQ
-          li
-            a(href='/report') Bugs & Hugs
+      li
+        a(href='/faq') FAQ
+      li
+        a(href='/report') Bugs & Hugs
+      li
+        a(href='/about') About
       li.navitem-pullright
         a(href='/user/login') Login
