--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -15,8 +15,6 @@
       li
         a(href='/faq') FAQ
       li
-        a(href='/report') Bugs & Hugs
-      li
-        a(href='/about') About
+        a(href='/bugsandhugs') Bugs & Hugs
       li.navitem-pullright
         a(href='/user/login') Login
