Add title to each view

--- a/views/index/bugsandhugs.pug
+++ b/views/index/bugsandhugs.pug
@@ -3,6 +3,8 @@ extends ../layouts/layout.pug
 block content
   .row.u-flex.u-flex-center
     .any.items.u-text-center
+      h3 Bugs & Hugs
+
       p If you find any kind of bug/mistake anywhere on the site, please kindly open an issue on <a href='https://github.com/forthright48/cpps/issues'>Github</a>. If possible, please check whether any similar issue is already open or not.
 
       p For hugs, feel free to send them in any way you want :)
