--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -12,4 +12,7 @@ html
 
       include ../partials/footer.pug
 
+    script(src='/public/js/vendor/vendor.min.js')
+    script(src='/public/js/layout/flash.js')
+
     block scripts
