--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -12,6 +12,8 @@ html
 
       include ../partials/footer.pug
 
+    script.
+      var flash = !{flash};
     script(src='/public/js/vendor/vendor.min.js')
     script(src='/public/js/layout/flash.js')
 
