--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -16,5 +16,9 @@
         a(href='/faq') FAQ
       li
         a(href='/bugsandhugs') Bugs & Hugs
-      li.navitem-pullright
-        a(href='/user/login') Login
+      if login
+        li.navitem-pullright
+          a(href='/user/logout') Logout
+      else
+        li.navitem-pullright
+          a(href='/user/login') Login
