Add logic for sending verification code through email

--- a/views/user/verify.pug
+++ b/views/user/verify.pug
@@ -14,4 +14,4 @@ block content
         .row
           .any.items
             input(type='submit', value='Verify')
-      p Did not receive your verification code? Click <a href='/user/send-verification-code'>here</a>.
+      p Did not receive your verification code? Click <a href='/user/send-code'>here</a>.
