Use a sass file to compile main.css

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title CPPS
 
-    link(rel="stylesheet", href="/public/css/all.css", media="screen", title="no title", charset="utf-8")
+    link(rel="stylesheet", href="/public/scss/main.css", media="screen", title="no title", charset="utf-8")
 
     block head
 
