Add delete button with danger button css

--- a/views/notebook/editNote.pug
+++ b/views/notebook/editNote.pug
@@ -16,3 +16,4 @@ block content
           textarea.u-full-width(name='body')= body
         input.button-primary(type='submit', value='Edit Note')
         a.button.left-margin(href=`/notebook/view-note/${slug}`) Done
+        a.button.button-danger.left-margin(href=`/notebook/delete-note/${slug}`) Delete
