--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,3 +24,30 @@ textarea {
 .left-margin {
   margin-left: 1rem;
 }
+
+/*Should go to next simplecss upgrade*/
+
+.button.button-danger,
+button.button-danger,
+input[type="submit"].button-danger,
+input[type="reset"].button-danger,
+input[type="button"].button-danger {
+  color: #FFF;
+  background-color: tomato;
+  border-color: tomato;
+}
+
+.button.button-danger:hover,
+button.button-danger:hover,
+input[type="submit"].button-danger:hover,
+input[type="reset"].button-danger:hover,
+input[type="button"].button-danger:hover,
+.button.button-danger:focus,
+button.button-danger:focus,
+input[type="submit"].button-danger:focus,
+input[type="reset"].button-danger:focus,
+input[type="button"].button-danger:focus {
+  color: #FFF;
+  background-color: #FF4136;
+  border-color: #FF4136;
+}
