Make js for layout more modular

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -18,6 +18,6 @@ html
     script.
       var flash = !{flash};
     script(src='/public/js/vendor/vendor.min.js')
-    script(src='/public/js/layout/flash.js')
+    script(src='/public/js/layout/index.js')
 
     block scripts
