Add style for tables

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,10 @@ textarea {
 .left-margin {
   margin-left: 1rem;
 }
+.u-margin-center {
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*Should go to next simplecss upgrade*/
 
@@ -31,4 +35,19 @@ textarea {
   color: #FFF;
   background-color: #FF4136;
   border-color: #FF4136;
+}
+
+/* Tables
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+th, td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #E1E1E1;
+}
+th:first-child, td:first-child {
+  padding-left: 0;
+}
+th:last-child, td:last-child {
+  padding-right: 0;
 }
