Add font-awesome and rename public path from /public to /

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
 @import "@forthright48/simplecss/dist/all";
 @import "jquery-modal/jquery.modal";
+@import "font-awesome/css/font-awesome";
 @import "css/style";
