--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -3,7 +3,7 @@ html
   head
     title CPPS
 
-    link(rel="stylesheet", href="/public/scss/main.css", media="screen", title="no title", charset="utf-8")
+    link(rel="stylesheet", href="/scss/main.css", media="screen", title="no title", charset="utf-8")
 
     block head
 
@@ -17,7 +17,7 @@ html
 
     script.
       var flash = !{flash};
-    script(src='/public/js/vendor/vendor.min.js')
-    script(src='/public/js/layout/index.js')
+    script(src='/js/vendor/vendor.min.js')
+    script(src='/js/layout/index.js')
 
     block scripts
