Add mathjax on frontend

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -5,7 +5,20 @@ html
 
     link(rel="stylesheet", href="/scss/main.css", media="screen", title="no title", charset="utf-8")
 
-    block head
+    script(type='text/x-mathjax-config').
+      MathJax.Hub.Config({
+        extensions: ["tex2jax.js"],
+        jax: ["input/TeX", "output/HTML-CSS"],
+        tex2jax: {
+          inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+          displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+          processEscapes: true
+        },
+        "HTML-CSS": { availableFonts: ["TeX"] }
+      });
+    script(type='text/javascript', src="https://cdn.mathjax.org/mathjax/latest/MathJax.js")
+
+  block head
 
   body
     .container
