Add special css for markdown in notebook body

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import "@forthright48/simplecss/dist/all";
 @import "jquery-modal/jquery.modal";
 @import "font-awesome/css/font-awesome";
+@import "css/markdown";
 @import "css/style";
