--- a/views/notebook/recent.pug
+++ b/views/notebook/recent.pug
@@ -18,7 +18,7 @@ block content
           tr
             td.moment-date= note.updatedAt
             td.moment-date= note.createdAt
-            td= note.slug
+            td #[a(href=`/notebook/view-note/${note.slug}`) #{note.slug}]
             td= note.title
             if ( status === 'root' )
               td.u-text-center
