--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,9 @@ textarea {
 .left-margin {
   margin-left: 1rem;
 }
+.right-margin {
+  margin-right: 1rem;
+}
 .u-margin-center {
   margin-left: auto;
   margin-right: auto;
