Add edit-item logic to gateway

--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -57,4 +57,4 @@ block content
                 td ---
 
               if (status === 'root')
-                td #[a(href="/admin/gateway/edit/"+val._id) Edit]
+                td #[a(href="/gateway/edit-item/"+val._id) Edit]
