Add read-item logic to gateway

--- a/views/gateway/addItem.pug
+++ b/views/gateway/addItem.pug
@@ -56,7 +56,7 @@ block content
         .row
           .any.items
             input.right-margin.button-primary(type='submit', value='Insert')
-            a.button(href=`/gateway/view-item/${parentId}`) Cancel
+            a.button(href=`/gateway/get-children/${parentId}`) Cancel
 
 block scripts
   script(src='/js/gateway/addItem/index.js')
