--- a/views/gateway/getChildren.pug
+++ b/views/gateway/getChildren.pug
@@ -8,6 +8,8 @@ block content
 
   .row.u-flex
     .any.items.u-text-center
+      if ( root.parentId )
+        a(href=`/gateway/get-children/${root.parentId}`) #[i.fa.fa-level-up] Go Up
       h4= root.title
       table.u-full-width(align="center")
         thead
