--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import "@forthright48/simplecss/dist/all";
+@import "vendor/bootstrap/css/bootstrap";
 @import "jquery-modal/jquery.modal";
 @import "font-awesome/css/font-awesome";
 @import "css/markdown";
