--- a/views/index/index.pug
+++ b/views/index/index.pug
@@ -1,6 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.u-flex.u-flex-center
-    .any.items.u-text-center
-      p A minimalistic portal for all about competitive programming and problem solving. Checkout <a href='/notbook'>Notebook</a> for theories and <a href='/gateway'> Gateway </a> for practice problems.
+  .row.flex-items-xs-middle.text-xs-center(style='min-height:80vh;')
+    .col-xs
+      p A minimalistic portal for all about competitive programming and problem solving.
+      p Checkout <a href='/notbook'>Notebook</a> for theories and <a href='/gateway'> Gateway </a> for practice problems.
