--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,2 @@
-.row.footer
-  .any.items.u-text-center
-    p &copy; 2016 #[a(href="http://forthright48.com") Mohammad Samiul Islam] All Rights Reserved. #[a(href="mailto:forthright48@gmail.com") Contact Me].
+footer.text-xs-center.small.text-muted
+  p &copy; 2016 #[a(href="http://forthright48.com") Mohammad Samiul Islam] All Rights Reserved. #[a(href="mailto:forthright48@gmail.com") Contact Me].
