--- a/views/index/bugsandhugs.pug
+++ b/views/index/bugsandhugs.pug
@@ -1,8 +1,8 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.u-flex.u-flex-center
-    .any.items.u-text-center
+  .row.flex-items-xs-middle.text-xs-center(style='min-height:80vh;')
+    .col-xs
       h3 Bugs & Hugs
 
       p If you find any kind of bug/mistake anywhere on the site, please kindly open an issue on <a href='https://github.com/forthright48/cpps/issues'>Github</a>. If possible, please check whether any similar issue is already open or not.
