--- a/views/user/register.pug
+++ b/views/user/register.pug
@@ -1,21 +1,17 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.u-flex.u-flex-center
-    .six.items.offset-by-3.u-text-center
-      h3 Register
+  .row.flex-items-xs-middle(style='min-height: 70vh;')
+    .offset-sm-3.col-sm-6.text-xs-center
+      h2 Register
       form(action='/user/register', method='post')
-        .row
-          .any.items
-            label
-              .label-body Email:
-              input.u-full-width( name='email', type='email', maxlength=256, required)
-            label
-              .label-body Password:
-              input.u-full-width( name='password', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required)
-        .row
-          .any.items.u-text-center
-            .recaptcha.
-              !{recaptcha}
-            input(type='submit', value='Register')
-      p Already a member? Click <a href='/user/login'>here</a> to Login.
+        .form-group
+          label(for='email') Email
+          input.form-control( id='email', name='email', type='email', maxlength=256, required, placeholder='Enter Email')
+        .form-group
+          label(for='password') Password
+          input.form-control( id='password', name='password', type='password', minlength=6, maxlength=256, title='Must be between 6 to 256 characters', required, placeholder='Enter Password')
+        .recaptcha.m-x-auto.m-b-1.
+          !{recaptcha}
+        input.btn.btn-primary(type='submit', value='Register')
+      small Already a member? Click <a href='/user/login'>here</a> to Login.
