--- a/views/user/verify.pug
+++ b/views/user/verify.pug
@@ -1,17 +1,13 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.u-flex.u-flex-center
-    .six.items.offset-by-3.u-text-center
-      p You have to verify your email address before proceeding.
+  .row.flex-items-xs-middle(style='min-height: 70vh;')
+    .offset-sm-3.col-sm-6.text-xs-center
+      .alert.alert-info.m-b-3 You have to verify your email address before proceeding.
       h3 Enter Verification Code
       form(action='/user/verify', method='post')
-        .row
-          .any.items
-            label
-              .label-body Code:
-              input.u-full-width( name='code', type='text', maxlength=256, required)
-        .row
-          .any.items
-            input(type='submit', value='Verify')
-      p Did not receive your verification code? Click <a href='/user/send-code'>here</a>.
+        .form-group
+          label(for='code') Code
+          input.form-control( id='code', name='code', type='text', maxlength=256, required)
+        input.btn.btn-primary(type='submit', value='Verify')
+      small Did not receive your verification code? Click <a href='/user/send-code'>here</a>.
