Integrate bootstrap with views

--- a/views/index/faq.pug
+++ b/views/index/faq.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle
+  .row.flex-items-xs-middle#fill-view
     .col-xs
       h3.text-xs-center Frequently Asked Questions
 
