--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -1,5 +1,5 @@
-doctype 5
-html
+doctype html
+html(lang='en')
   head
     title CPPS
 
@@ -32,6 +32,6 @@ html
     script.
       var flash = !{flash};
     script(src='/js/vendor/vendor.min.js')
-    script(src='/js/layout/index.js')
+    script(src='/js/layout/index.min.js')
 
     block scripts
