--- a/views/index/bugsandhugs.pug
+++ b/views/index/bugsandhugs.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle.text-xs-center(style='min-height:80vh;')
+  .row.flex-items-xs-middle.text-xs-center#fill-view
     .col-xs
       h3 Bugs & Hugs
 
