--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle(style='min-height: 75vh;')
+  .row.flex-items-xs-middle#fill-view
     .offset-sm-3.col-sm-6.text-xs-center
       h2 Login
       form(action='/user/login', method='post')
