--- a/views/user/verify.pug
+++ b/views/user/verify.pug
@@ -1,7 +1,7 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.flex-items-xs-middle(style='min-height: 70vh;')
+  .row.flex-items-xs-middle#fill-view
     .offset-sm-3.col-sm-6.text-xs-center
       .alert.alert-info.m-b-3 You have to verify your email address before proceeding.
       h3 Enter Verification Code
