--- a/views/notebook/recent.pug
+++ b/views/notebook/recent.pug
@@ -1,10 +1,10 @@
 extends ../layouts/layout.pug
 
 block content
-  .row.u-flex
-    .any.items.u-text-center
-      h3 Recently Added/Modified
-      table.u-margin-center
+  .row.flex-items-xs-middle#fill-view
+    .col-xs
+      h3.text-xs-center Recently Added/Modified
+      table.table
         thead
           tr
             th Modified
